Possible sidebar styling fix for Safari on iOS

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -286,6 +286,10 @@ body {
             * {
                 font-size: 3rem;
             }
+            button {
+                padding: 0 15px;
+                height: 100%;
+            }
             .month-selector {
                 display: none !important;
             }
